<resources>
    <string name="app_name">GIPHY_Kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trend">Популярные</string>
    <string name="urLike">Вам понравились</string>
    <string name="search">Поиск</string>
    <string name="random">Случайные</string>
    <string name="next">Далее</string>
    <string name="back">Назад</string>
    <string name="copy">Ссылка скопирована</string>
</resources>